# libvictor

./: .gitignore  README.md  build_android.sh  libvictor.3
android/: CMakeLists.txt
src/: Makefile  Makefile.linux  Makefile.win  _test.c  asort.c  config.h  dutil.c  error.c  file.c  file.h  graph.c  graph.h  graph_utils.h  heap.c  heap.h  iflat_utils.c  iflat_utils.h  index.c  index.h  index_flat.c  index_flat.h  index_flat_mp.c  index_flat_mp.h  index_hnsw.c  index_hnsw.h  index_nsw.c  index_nsw.h  kmeans.c  kmeans.h  kvtable.c  libvictor.dylib  libvictor.pc  map.c  map.h  math.c  math.h  mem.c  mem.h  method.c  method.h  (+19 more)
src/packaging/: libvictor.pc.in
